Fix dark mode, change wording, hide menu

--- a/site/assets/main.css
+++ b/site/assets/main.css
@@ -896,6 +896,7 @@ body {
   --tw-prose-invert-quote-borders: #374151;
   --tw-prose-invert-captions: #9ca3af;
   --tw-prose-invert-code: #fff;
+  --tw-prode-invert-code-background: #444444;
   --tw-prose-invert-pre-code: #d1d5db;
   --tw-prose-invert-pre-bg: rgb(0 0 0 / 50%);
   --tw-prose-invert-th-borders: #4b5563;
@@ -1673,6 +1674,7 @@ article blockquote {
   --tw-prose-quote-borders: var(--tw-prose-invert-quote-borders);
   --tw-prose-captions: var(--tw-prose-invert-captions);
   --tw-prose-code: var(--tw-prose-invert-code);
+  --tw-prode-code-background: var(--tw-prode-invert-code-background);
   --tw-prose-pre-code: var(--tw-prose-invert-pre-code);
   --tw-prose-pre-bg: var(--tw-prose-invert-pre-bg);
   --tw-prose-th-borders: var(--tw-prose-invert-th-borders);
